--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -689,10 +689,25 @@ a {
   transition: color 0.6s;
 }
 .cid-soFoyD5nVg {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   background-image: url("https://gustavobragaia.github.io/banner/banner.png");
+  background-position: initial !important;
+  background-repeat: no-repeat !important;
 }
-.cid-soFoyD5nVg .row {
-  flex-direction: row-reverse;
+@media (max-width: 900px){
+  .cid-soFoyD5nVg{
+
+    padding-bottom: 0rem  !important;
+  }
+}
+@media (max-width: 900px) {
+  .cid-soFoyD5nVg .letrasperson {
+    font-size: 43px !important;
+  }
+  .cid-soFoyD5nVg .letrascertas {
+    font-size: 43px !important;
+  }
 }
 .cid-soFoyD5nVg .letrasperson {
   -webkit-text-stroke-width: 2px;
@@ -1183,6 +1198,14 @@ a {
     padding: 0 2rem;
   }
 }
+@media (max-width: 900px) {
+  .cid-soFot0dyNH .astronauta {
+    width: 64%!important;
+    margin-right: auto;
+    margin-top: auto;
+    margin-left: auto;
+  }
+}
 .cid-soFot0dyNH .letrasperson {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: #ffffff;
@@ -1275,8 +1298,8 @@ a {
   }
 }
 .cid-soXKfepxBB {
-  padding-top: 9rem;
-  padding-bottom: 7rem;
+  padding-top: 7rem;
+  padding-bottom: 6rem;
   background-image: url("https://ecommercerocket.com.br/wp-content/uploads/2020/08/fundo-formar-especialista-digital.png");
 }
 .cid-soXKfepxBB .mbr-iconfont {
@@ -1326,6 +1349,11 @@ a {
   font-size: 50px;
   font-weight: 900;
   text-transform: uppercase;
+}
+@media (max-width: 900px) {
+  .cid-soXKfepxBB .letrascertas {
+    line-break: anywhere !important;
+  }
 }
 .cid-soXKfepxBB .card-title,
 .cid-soXKfepxBB .card-box {
@@ -1378,6 +1406,14 @@ a {
   font-weight: 900;
   text-transform: uppercase;
 }
+@media (max-width: 900px) {
+  .cid-soLtCVxDNS .letrascertas {
+    font-size: 50px;
+  }
+  .cid-soLtCVxDNS .letrasperson {
+    font-size: 42px;
+  }
+}
 .cid-soLtCVxDNS .botaomain {
   width: 100%;
   font-size: 20px !important;
@@ -1389,6 +1425,12 @@ a {
   padding-top: 12px !important;
   padding-bottom: 12px !important;
   padding-right: 24px !important;
+}
+.cid-soLtCVxDNS .alertinha {
+  font-family: Montserrat;
+  background: linear-gradient(46deg, #ff7e52 1%, #7826ff 100%) !important;
+  border-radius: 30px;
+  box-shadow: 0px 0px 24px -2px #6729cd !important;
 }
 .cid-soLtCVxDNS .botaomain:hover {
   border-color: #6000ff !important;
