--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -696,9 +696,6 @@ a {
   background-repeat: no-repeat !important;
 }
 @media (max-width: 900px) {
-  .cid-soFoyD5nVg {
-    padding-bottom: 0rem !important;
-  }
   .cid-soFoyD5nVg .letrasperson {
     font-size: 43px !important;
   }
@@ -768,8 +765,10 @@ a {
   }
 }
 .cid-soFoyD5nVg .image-wrapper img {
-  width: 100%;
+  width: 82%;
   object-fit: cover;
+  margin: auto;
+  
 }
 @media (min-width: 992px) {
   .cid-soFoyD5nVg .text-wrapper {
@@ -1179,6 +1178,11 @@ a {
   padding-bottom: 6rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-inferior.png");
 }
+@media (max-width: 900px){
+  .cid-soFot0dyNH{
+    padding-bottom: 0rem  !important;
+  }
+}
 .cid-soFot0dyNH .astronauta {
   width: 79%!important;
 }
@@ -1188,6 +1192,7 @@ a {
 @media (max-width: 991px) {
   .cid-soFot0dyNH .image-wrapper {
     padding: 1rem;
+    z-index: 1;
   }
 }
 @media (min-width: 992px) {
@@ -1296,8 +1301,11 @@ a {
 }
 .cid-soXKfepxBB {
   padding-top: 7rem;
-  padding-bottom: 6rem;
-  background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
+  padding-bottom: 4rem;
+  background-image: url("https://richardlp1.github.io/banner/123.png");
+  background-position: center;
+  background-repeat: round !important;
+  background-size: auto !important;
 }
 .cid-soXKfepxBB .mbr-iconfont {
   display: block;
@@ -1320,18 +1328,12 @@ a {
   background-repeat: no-repeat;
   box-shadow: 0px 0px 36px 2px #7826ff;
 }
-@media (max-width:900px){
+@media (max-width: 900px){
   .cid-soXKfepxBB .card-wrapper{
-    width: 80% !important;
+    width: 73% !important;
+    
   }
 }
-@media (max-width:900px){
-  .cid-soXKfepxBB .espacoo{
-    margin-top: 22px;
-    margin-bottom: 22px;
-  }
-}
-
 .cid-soXKfepxBB .zoom {
   transition: transform 0.2s;
   margin: 0 auto;
@@ -1383,10 +1385,349 @@ a {
 .cid-soXKfepxBB H4 {
   color: #ffffff;
 }
+.cid-spqlXB5WXB {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-image: url("https://richardlp1.github.io/banner/123.png");
+  background-position: center;
+  background-repeat: round !important;
+  background-size: auto !important;
+}
+@media (max-width: 900px){
+  .cid-spqlXB5WXB{
+    display: none !important;
+  }
+}
+.cid-spqlXB5WXB .mbr-overlay {
+  z-index: 1;
+}
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.cid-spqlXB5WXB .animacaolpl {
+  animation: 1.6s ease-out 0s 1 slideUp;
+}
+@media (min-width: 992px) {
+  .cid-spqlXB5WXB .carousel {
+    min-height: 400px;
+  }
+  .cid-spqlXB5WXB .carousel img {
+    max-height: 400px;
+    object-fit: contain;
+  }
+}
+.cid-spqlXB5WXB .letrasperson {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #ffffff;
+  color: rgba(0, 0, 0, 0);
+  font-size: 50px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+.cid-spqlXB5WXB .foto {
+  width: 18% !important;
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-spqlXB5WXB .carousel {
+    min-height: 260px;
+  }
+  .cid-spqlXB5WXB .carousel img {
+    max-height: 260px;
+    object-fit: contain;
+  }
+}
+@media (max-width: 767px) {
+  .cid-spqlXB5WXB .carousel {
+    min-height: 220px;
+  }
+  .cid-spqlXB5WXB .carousel img {
+    max-height: 220px;
+    object-fit: contain;
+  }
+  .cid-spqlXB5WXB .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-spqlXB5WXB .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-spqlXB5WXB .carousel,
+.cid-spqlXB5WXB .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-spqlXB5WXB .item-wrapper {
+  width: 100%;
+}
+.cid-spqlXB5WXB .carousel-caption {
+  bottom: 40px;
+}
+.cid-spqlXB5WXB .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-spqlXB5WXB .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-spqlXB5WXB .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-spqlXB5WXB .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-spqlXB5WXB .carousel-control {
+  top: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-spqlXB5WXB .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: -3.5rem;
+}
+.cid-spqlXB5WXB .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: -3.5rem;
+}
+@media (max-width: 767px) {
+  .cid-spqlXB5WXB .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-spqlXB5WXB .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+}
+.cid-spqlXB5WXB .carousel-indicators li {
+  max-width: 10px;
+  height: 10px;
+  width: 10px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-spqlXB5WXB .carousel-indicators li.active,
+.cid-spqlXB5WXB .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-spqlXB5WXB .carousel-indicators li::after,
+.cid-spqlXB5WXB .carousel-indicators li::before {
+  content: none;
+}
+.cid-spqlXB5WXB .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-spqlXB5WXB .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-spqlXB5WXB H4 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-spqlXB5WXB .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-spqAiuTMYI {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-image: url("https://richardlp1.github.io/banner/123.png");
+  background-position: center;
+  background-repeat: round !important;
+  background-size: auto !important;
+}
+@media (min-width: 900px){
+  .cid-spqAiuTMYI{
+    display: none !important;
+  }
+}
+.cid-spqAiuTMYI .mbr-overlay {
+  z-index: 1;
+}
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.cid-spqAiuTMYI .animacaolpl {
+  animation: 1.6s ease-out 0s 1 slideUp;
+}
+@media (min-width: 992px) {
+  .cid-spqAiuTMYI .carousel {
+    min-height: 400px;
+  }
+  .cid-spqAiuTMYI .carousel img {
+    max-height: 400px;
+    object-fit: contain;
+  }
+}
+.cid-spqAiuTMYI .letrasperson {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #ffffff;
+  color: rgba(0, 0, 0, 0);
+  font-size: 50px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+.cid-spqAiuTMYI .foto {
+  width: 100% !important;
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-spqAiuTMYI .carousel {
+    min-height: 260px;
+  }
+  .cid-spqAiuTMYI .carousel img {
+    max-height: 260px;
+    object-fit: contain;
+  }
+}
+@media (max-width: 767px) {
+  .cid-spqAiuTMYI .carousel {
+    min-height: 220px;
+  }
+  .cid-spqAiuTMYI .carousel img {
+    max-height: 220px;
+    object-fit: contain;
+  }
+  .cid-spqAiuTMYI .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-spqAiuTMYI .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-spqAiuTMYI .carousel,
+.cid-spqAiuTMYI .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-spqAiuTMYI .item-wrapper {
+  width: 100%;
+}
+.cid-spqAiuTMYI .carousel-caption {
+  bottom: 40px;
+}
+.cid-spqAiuTMYI .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-spqAiuTMYI .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-spqAiuTMYI .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-spqAiuTMYI .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-spqAiuTMYI .carousel-control {
+  top: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-spqAiuTMYI .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: -3.5rem;
+}
+.cid-spqAiuTMYI .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: -3.5rem;
+}
+@media (max-width: 767px) {
+  .cid-spqAiuTMYI .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-spqAiuTMYI .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+}
+.cid-spqAiuTMYI .carousel-indicators li {
+  max-width: 10px;
+  height: 10px;
+  width: 10px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-spqAiuTMYI .carousel-indicators li.active,
+.cid-spqAiuTMYI .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-spqAiuTMYI .carousel-indicators li::after,
+.cid-spqAiuTMYI .carousel-indicators li::before {
+  content: none;
+}
+.cid-spqAiuTMYI .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-spqAiuTMYI .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-spqAiuTMYI H4 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-spqAiuTMYI .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-soLtCVxDNS {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding-top: 8rem;
+  padding-bottom: 9rem;
   background-image: url('https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png');
+}
+@media (max-width: 900px){
+  .cid-soLtCVxDNS{
+    padding-bottom: 5rem !important;
+  }
 }
 .cid-soLtCVxDNS .mbr-overlay {
   background-color: #ff5300;
@@ -1471,9 +1812,15 @@ a {
   color: #ffffff;
 }
 .cid-soLA75kEsB {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
+}
+@media (max-width: 900px){
+  .cid-soLA75kEsB{
+    padding-bottom: 0px !important;
+    padding-top: 0  !important;
+  }
 }
 @media (max-width: 767px) {
   .cid-soLA75kEsB .media-wrap {
@@ -1536,6 +1883,11 @@ a {
   padding-top: 7rem;
   padding-bottom: 8rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
+}
+@media (max-width: 900px){
+  .cid-sp20tt4LAM{
+    padding-bottom: 1rem !important;
+  }
 }
 .cid-sp20tt4LAM .card-wriper {
   min-height: 220px;
@@ -1639,6 +1991,12 @@ a {
   padding-top: 7rem;
   padding-bottom: 10rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
+}
+@media (max-width: 900px){
+  .cid-soFoyD5nVg {
+      padding-bottom: 0rem !important;
+      margin-top: -49px  !important;
+    }
 }
 .cid-sp1XNCKYTT .mbr-overlay {
   background-color: #ff5300;
@@ -2143,6 +2501,10 @@ a {
   padding-bottom: 8rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
 }
+@media (max-width: 900px) {
+  .cid-sp6NazdG8M  {
+    padding-bottom:1rem !important  }
+}
 .cid-sp6NazdG8M .card-wriper {
   min-height: 220px;
   transition: all 0.3s;
@@ -2246,6 +2608,18 @@ a {
   padding-bottom: 10rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
 }
+@media (max-width: 900px){
+  .cid-sp1XNCKYTT{
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+  }
+}
+@media(max-width: 900px){
+  .cid-sp6NaAaW28{
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+  }
+}
 .cid-sp6NaAaW28 .mbr-overlay {
   background-color: #ff5300;
   opacity: 0.9;
@@ -2333,6 +2707,12 @@ a {
   padding-bottom: 45px;
   background-color: #ffffff;
 }
+@media (max-width: 900px){
+  .cid-sp6NaAITDs{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+}
 @media (max-width: 767px) {
   .cid-sp6NaAITDs .media-wrap {
     margin-bottom: 1rem;
@@ -2416,8 +2796,8 @@ a {
 .cid-sp6NaCsxnn .botao {
   border-radius: 40px !important;
   background: none !important;
-  border-color: #fff!important;
-  color: #fff!important;
+  border-color: #ff5300!important;
+  color: #ff5300!important;
 }
 .cid-sp6NaCsxnn .dropdown-menu {
   padding: 0;
@@ -2749,6 +3129,11 @@ a {
   padding-bottom: 8rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
 }
+@media (max-width: 900px){
+  .cid-sp6NT8hzat{
+    padding-bottom: 1rem !important;
+  }
+}
 .cid-sp6NT8hzat .card-wriper {
   min-height: 220px;
   transition: all 0.3s;
@@ -2852,6 +3237,12 @@ a {
   padding-bottom: 10rem;
   background-image: url("https://richardlp1.github.io/banner/fundo-formar-especialista-digital.png");
 }
+@media (max-width: 900px){
+  .cid-sp6NT9rHbn{
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+  }
+}
 .cid-sp6NT9rHbn .mbr-overlay {
   background-color: #ff5300;
   opacity: 0.9;
@@ -2938,6 +3329,12 @@ a {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #ffffff;
+}
+@media (max-width: 900px) {
+  .cid-sp6NTak8Uq {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
 }
 @media (max-width: 767px) {
   .cid-sp6NTak8Uq .media-wrap {
